enter chat room

--- a/zoom/src/views/home.pug
+++ b/zoom/src/views/home.pug
@@ -9,7 +9,15 @@ html(lang="ko")
     header 
       h1 Noom
     main 
-      
-
+      div#welcome
+        form
+          input(type="text", required, placeholder="room name")
+          button Enter Room 
+      div#room
+        h3
+        ul 
+        form
+          input(type="text", required, placeholder="message")
+          button Send
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js")
