--- a/zoom/src/views/home.pug
+++ b/zoom/src/views/home.pug
@@ -13,6 +13,8 @@ html(lang="ko")
         form
           input(type="text", required, placeholder="room name")
           button Enter Room 
+        h4 Open Rooms 
+        ul
       div#room
         h3
         ul 
