--- a/zoom/src/views/home.pug
+++ b/zoom/src/views/home.pug
@@ -9,20 +9,24 @@ html(lang="ko")
     header 
       h1 Noom
     main 
-      div#welcome
-        form
-          input(type="text", required, placeholder="room name")
-          button Enter Room 
-        h4 Open Rooms 
-        ul
-      div#room
-        h3
-        ul 
-        form#name
-          input(type="text", required, placeholder="nickname")
-          button Save
-        form#msg
-          input(type="text", required, placeholder="message")
-          button Send
+      div#myStream
+        video#myFace(autoplay, playsinline, width="400", height="400")
+        button#mute Mute 
+        button#camera Camera Off
+      //- div#welcome
+      //-   form
+      //-     input(type="text", required, placeholder="room name")
+      //-     button Enter Room 
+      //-   h4 Open Rooms 
+      //-   ul
+      //- div#room
+      //-   h3
+      //-   ul 
+      //-   form#name
+      //-     input(type="text", required, placeholder="nickname")
+      //-     button Save
+      //-   form#msg
+      //-     input(type="text", required, placeholder="message")
+      //-     button Send
     script(src="/socket.io/socket.io.js")
     script(src="/public/js/app.js")
