--- a/zoom/src/views/home.pug
+++ b/zoom/src/views/home.pug
@@ -13,6 +13,7 @@ html(lang="ko")
         video#myFace(autoplay, playsinline, width="400", height="400")
         button#mute Mute 
         button#camera Camera Off
+        select#cameras
       //- div#welcome
       //-   form
       //-     input(type="text", required, placeholder="room name")
