--- a/zoom/src/views/home.pug
+++ b/zoom/src/views/home.pug
@@ -9,11 +9,16 @@ html(lang="ko")
     header 
       h1 Noom
     main 
-      div#myStream
-        video#myFace(autoplay, playsinline, width="400", height="400")
-        button#mute Mute 
-        button#camera Camera Off
-        select#cameras
+      div#welcome
+        form
+          input(type="text", placeholder="room name", required)
+          button Enter room
+      div#call
+        div#myStream
+          video#myFace(autoplay, playsinline, width="400", height="400")
+          button#mute Mute 
+          button#camera Camera Off
+          select#cameras
       //- div#welcome
       //-   form
       //-     input(type="text", required, placeholder="room name")
