--- a/zoom/src/views/home.pug
+++ b/zoom/src/views/home.pug
@@ -19,6 +19,7 @@ html(lang="ko")
           button#mute Mute 
           button#camera Camera Off
           select#cameras
+          video#peerFace(autoplay, playsinline, width="400", height="400")
       //- div#welcome
       //-   form
       //-     input(type="text", required, placeholder="room name")
